Fix alignment issue in income statement editor.

--- a/client/src/styles/pages/components/IncomeStatementEditor.scss
+++ b/client/src/styles/pages/components/IncomeStatementEditor.scss
@@ -161,6 +161,7 @@
   {
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
   }
 
   .column-left-buttons
